k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: toolshed
spec:
  selector:
    matchLabels:
      app: toolshed
  serviceName: "toolshed"
  replicas: 1
  template:
    metadata:
      labels:
        app: toolshed
    spec:
      containers:
        - name: toolshed
          image: dukeman/toolshed
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: /var/data
              name: toolshed-db-volume
            - mountPath: /var/staticfiles
              name: toolshed-static-volume
            - mountPath: /var/media
              name: toolshed-media-volume
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 10"]
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
              name: nginx-config
            - mountPath: /var/staticfiles
              name: toolshed-static-volume
            - mountPath: /var/data/media
              name: toolshed-media-volume
      volumes:
        - name: toolshed-db-volume
          persistentVolumeClaim:
            claimName: toolshed-db-volume
        - name: toolshed-static-volume
          emptyDir: {}
        - name: toolshed-media-volume
          persistentVolumeClaim:
            claimName: toolshed-media-volume
        - name: nginx-config
          configMap:
            name: nginx-config
  volumeClaimTemplates:
    - metadata:
        name: toolshed-db-volume
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "longhorn"
        resources:
          requests:
            storage: 200Mi
    - metadata:
        name: toolshed-media-volume
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "longhorn"
        resources:
          requests:
            storage: 100Mi
