k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: toolshed
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: toolshed
